@@ -14,7 +14,8 @@ Require-Bundle: com.google.guava;bundle-version="[21.0,30.2)",
  org.eclipse.sirius.common.ui;bundle-version="7.1.0",
  org.eclipse.sirius.diagram.ui.ext;bundle-version="7.1.0",
  org.eclipse.emf.common.ui;bundle-version="2.7.0",
- org.eclipse.sirius.diagram.formatdata;bundle-version="7.1.0"
+ org.eclipse.sirius.diagram.formatdata;bundle-version="7.1.0",
+ org.eclipse.sirius.ecore.extender;bundle-version="7.1.0"
 Bundle-Localization: plugin
 Bundle-ActivationPolicy: lazy
 Bundle-RequiredExecutionEnvironment: JavaSE-11
