@@ -160,6 +160,12 @@
 			</li>
 		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-success">Added</span> The interface 
+				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority</code> now has a 
+				<code>isFrozen(EObject)</code> method. This is a status handled by the collaborative plugins, but this new API makes this status available for queries from Sirius core plugins.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius">Changes in 
 			<code>org.eclipse.sirius</code>
 		</h4>
