@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2021 THALES GLOBAL SERVICES.
+ * Copyright (c) 2007, 2022 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -170,6 +170,11 @@ public class DummyPermissionAuthority implements IPermissionAuthority {
     @Override
     public List<EObject> getLockedObjects() {
         return Collections.unmodifiableList(new ArrayList<EObject>());
+    }
+
+    @Override
+    public boolean isFrozen(EObject eObject) {
+        return false;
     }
 
 }
