@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2021 THALES GLOBAL SERVICES.
+ * Copyright (c) 2009, 2023 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -242,5 +242,13 @@ public class ReadOnlyWrapperPermissionAuthority extends ReadOnlyPermissionAuthor
     @Override
     public LockStatus getLockStatus(EObject element) {
         return getWrappedAuthority().getLockStatus(element);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public boolean isFrozen(EObject eObject) {
+        return this.wrappedAuthority.isFrozen(eObject);
     }
 }
